# tidewatch

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  LICENSE  MIGRATION_BASELINE.md  README.md  RELEASING.md  SECURITY.md  compose-example.yaml  compose.yaml  package-lock.json
backend/: Dockerfile.dev  Dockerfile.test  pyproject.toml
backend/app/: __init__.py  database.py  db.py  dependencies.py  exceptions.py  main.py
backend/app/api/: __init__.py  analytics.py  auth.py  backup.py  cleanup.py  containers.py  dependencies.py  history.py  oidc.py  restarts.py  scan.py  settings.py  system.py  updates.py  webhooks.py  widget.py
backend/app/middleware/: __init__.py  csrf.py  rate_limit.py
backend/app/migrations/: 001_add_intelligent_restart.py  001_add_intelligent_restart.sql  002_update_history_reason_fields.py  003_add_health_check_method.py  004_add_health_check_auth.py  005_add_release_source.py  006_add_dockerfile_severity.py  006_add_retry_logic.py  007_add_update_windows.py  007_update_restart_log_schema.py  008_add_dependency_tracking.py  009_add_retry_and_window_settings.py  010_add_include_prereleases.py  011_add_missing_columns.py  012_add_metrics_history.py  013_add_stale_container_support.py  014_add_unique_constraint_updates.py  015_add_is_my_project.py  016_add_dockerfile_dependencies.py  017_add_theme_setting.py  018_add_dockerfile_severity.py  019_add_database_indexes.py  020_add_secret_keys_table.py  021_remove_authentication.py  022_add_authentication.py  023_fix_cve_tracking_json_defaults.py  024_mark_sensitive_settings_encrypted.py  025_add_vulnerability_scans.py  026_add_webhooks.py  027_add_update_rejection_fields.py  028_update_restart_log_schema.py  029_add_optimistic_locking.py  030_add_version_index.py  031_add_dependency_ignore_and_updates.py  032_add_latest_major_tag.py  033_add_scope_violation.py  034_add_check_jobs.py  035_add_decision_traceability.py  036_add_compose_project.py  037_add_ignored_version_prefix.py  (+30 more)
backend/app/models/: __init__.py  app_dependency.py  check_job.py  container.py  dependency_scan_job.py  dockerfile_dependency.py  history.py  http_server.py  metrics_history.py  mixins.py  oidc_pending_link.py  oidc_state.py  pending_scan_job.py  release_corroboration_cache.py  restart_log.py  restart_state.py  secret_key.py  setting.py  sibling_drift_event.py  supply_chain_baseline.py  update.py  user.py  vulnerability_scan.py  webhook.py
backend/app/routes/: __init__.py  analytics.py  auth.py  backup.py  cleanup.py  containers.py  dependencies.py  events.py  history.py  oidc.py  restarts.py  scan.py  settings.py  system.py  updates.py  webhooks.py  widget.py
backend/app/schemas/: __init__.py  analytics.py  auth.py  check_job.py  container.py  dependency.py  history.py  restart.py  scan.py  setting.py  update.py  webhook.py
backend/app/services/: __init__.py  app_dependencies.py  auth.py  changelog.py  changelog_updater.py  channel_anchor.py  check_job_service.py  check_run_context.py  cleanup_service.py  compose_parser.py  container_cleanup_service.py  container_monitor.py  data_backup_service.py  dependency_ignore_service.py  dependency_manager.py  dependency_scan_service.py  dependency_update_service.py  docker_access.py  docker_stats.py  dockerfile_parser.py  event_bus.py  http_server_scanner.py  latest_lineage_resolver.py  metrics.py  metrics_collector.py  mount_resolver.py  oidc.py  persistent_tag_cache.py  project_scanner.py  protected_infra.py  registry_client.py  registry_rate_limiter.py  restart_scheduler.py  restart_service.py  scan_service.py  scheduler.py  settings_service.py  sibling_reconciliation.py  supply_chain_analyzer.py  supply_chain_baseline_builder.py  (+10 more)
backend/app/services/notifications/: __init__.py  base.py  discord.py  dispatcher.py  email.py  gotify.py  ntfy.py  slack.py  (+2 more)
backend/app/utils/: encryption.py  error_handling.py  file_operations.py  manifest_parsers.py  manifest_reader.py  project_resolver.py  retry.py  security.py  url_validation.py  validators.py  version.py
backend/scripts/: export_openapi.py  run-tests.sh
backend/static/: index.html
backend/static/assets/: About-BVLJ-xoK.js  About-C-5er9h3.js  About-CYFLdzqd.js  About-pQEfebeZ.js  CheckProgressBar-CQFTT7sR.js  CheckProgressBar-CuCaV4t2.js  ContainerModal-BObMr9Vi.js  ContainerModal-BYcSEJyh.js  ContainerModal-Bu29kHQ-.js  ContainerModal-DZzR_jP7.js  Dashboard-CMlvD6Im.js  Dashboard-CbI7w5Dv.js  Dashboard-CsL8lUVC.js  Dashboard-Oz4Kms_8.js  History-CODvxZjx.js  History-CPmfRRfL.js  History-CuFWuPw2.js  History-CuHkNjJy.js  Settings-DXyv-eqE.js  Settings-Dh6_lpLK.js  Settings-Dv51iRaV.js  Settings-cRoXoB-l.js  StatusBadge-3gfg4x1Y.js  StatusBadge-Cc0T94DK.js  StatusBadge-Dt8L00S1.js  StatusBadge-WE8vTTfy.js  Updates-3HIpoB8d.js  Updates-BpynS4B7.js  Updates-DG2rhktT.js  Updates-ehxpAzec.js  charts-vendor-BIeDjWhj.js  charts-vendor-DENkKz6H.js  charts-vendor-dUpW-fSj.js  index-BA9_ip66.css  index-BHFnowVW.js  index-BUvqVJQz.js  index-CGBKEoxX.js  index-Co59pYVW.js  index-Do60qgoS.css  index-VRrh9Lou.css  (+8 more)
backend/tests/: conftest.py  test_api_analytics.py  test_api_auth.py  test_api_backup.py  test_api_cleanup.py  test_api_containers.py  test_api_dependencies.py  test_api_events.py  test_api_history.py  test_api_oidc.py  test_api_restarts.py  test_api_scan.py  test_api_settings.py  test_api_system.py  test_api_updates.py  test_api_webhooks.py  test_auth.py  test_changelog.py  test_channel_anchor.py  test_check_job_service.py  test_compose_parser.py  test_data_backup_service.py  test_debug_filter.py  test_dependency_manager.py  test_dependency_scan_service.py  test_digest_immutability.py  test_digest_pinned_pull.py  test_dispatcher_self_managed.py  test_docker_access.py  test_dockerfile_parser_args.py  test_duplicate_container_names.py  test_encryption.py  test_file_operations.py  test_http_server_filesystem.py  test_logging_config.py  test_manifest_parsers.py  test_metrics_collector.py  test_middleware_csrf.py  test_middleware_ratelimit.py  test_migration_061.py  (+30 more)
(+144 files in other folders)
