[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tidewatch"
version = "3.9.1"
description = "Intelligent Docker container update manager"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.3",
    "granian>=2.7.3",
    "sqlalchemy>=2.0.49",
    "aiosqlite>=0.22.1",
    "pydantic>=2.13.0",
    "python-multipart>=0.0.26",
    "ruamel.yaml>=0.19.1",
    "httpx>=0.28.1",
    "python-dateutil>=2.9.0.post0",
    "apscheduler>=3.11.2",
    "packaging>=26.0",
    "docker>=7.1.0",
    "prometheus-client>=0.25.0",
    "aiosmtplib>=5.1.0",
    # Authentication dependencies
    "authlib>=1.6.10",
    "argon2-cffi>=25.1.0",
    "pyjwt>=2.12.1",
    "itsdangerous>=2.2.0",
    "email-validator>=2.3.0",
    # HTML to Markdown conversion
    "html2text>=2025.4.15",
    # Transitive dependency floors (security)
    "cryptography>=46.0.7",
    "requests>=2.33.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "httpx>=0.28.1",
    "pyright>=1.1.408",
    "ruff>=0.15.10",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers --cov=app --cov-report=term-missing"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/migrations/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"app/main.py" = ["E402"]
"tests/*" = ["S101"]

[tool.pyright]
typeCheckingMode = "standard"
pythonVersion = "3.14"
include = ["app", "tests"]
exclude = ["**/__pycache__", ".venv", "build"]
reportMissingImports = true
reportMissingTypeStubs = false
reportCallIssue = "none"
