[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "tidewatch"
version = "3.13.0"
description = "Intelligent Docker container update manager"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.3",
    "granian>=2.7.5",
    "sqlalchemy>=2.0.50",
    "aiosqlite>=0.22.1",
    "pydantic>=2.13.4",
    "python-multipart>=0.0.30",
    "ruamel.yaml>=0.19.1",
    "httpx>=0.28.1",
    "python-dateutil>=2.9.0.post0",
    "apscheduler>=3.11.2",
    "packaging>=26.2",
    "docker>=7.1.0",
    "prometheus-client>=0.25.0",
    "aiosmtplib>=5.1.1",
    # Authentication dependencies
    "joserfc>=1.7.0",
    "argon2-cffi>=25.1.0",
    "pyjwt>=2.13.0",
    "itsdangerous>=2.2.0",
    "email-validator>=2.3.0",
    # HTML to Markdown conversion
    "html2text>=2025.4.15",
    # Pretty log handler (color, aligned columns, structured tracebacks) —
    # enabled when TIDEWATCH_LOG_PRETTY=true
    "rich>=15.0.0",
    # Transitive dependency floors (security)
    "cryptography>=48.0.0",
    "requests>=2.34.2",
    "urllib3>=2.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "httpx>=0.28.1",
    "pyright>=1.1.410",
    "ruff>=0.15.15",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/migrations/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"app/main.py" = ["E402"]
"tests/*" = ["S101"]

[tool.pyright]
typeCheckingMode = "standard"
pythonVersion = "3.14"
include = ["app", "tests"]
exclude = ["**/__pycache__", ".venv", "build"]
reportMissingImports = true
reportMissingTypeStubs = false
reportCallIssue = "none"
